force-app/main/default/objects/objApplicationTemplate__c/objApplicationTemplate__c.object-meta.xml
<CustomObject>
    <label>申請定義</label>
    <pluralLabel>申請定義</pluralLabel>
    <nameField>
        <label>申請名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>