force-app/main/default/objects/objApplicationTemplate__c/fields/AgreementCheckText__c.field-meta.xml
<CustomField>
    <fullName>AgreementCheckText__c</fullName>
    <defaultValue>&quot;内容・条件を確認しました。&quot;</defaultValue>
    <label>同意チェック文言</label>
    <length>255</length>
    <type>Text</type>
</CustomField>