force-app/main/default/objects/objApplicationTemplate__c/fields/AttachedFileMessage__c.field-meta.xml
<CustomField>
    <fullName>AttachedFileMessage__c</fullName>
    <label>添付ファイル文言</label>
    <length>255</length>
    <type>Text</type>
</CustomField>