force-app/main/default/objects/objApplicationTemplate__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01_くらし</fullName>
            </value>
            <value>
                <fullName>02_子育て・教育・福祉</fullName>
            </value>
            <value>
                <fullName>03_観光・文化・スポーツ</fullName>
            </value>
            <value>
                <fullName>04_まちづくり・事業者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>