force-app/main/default/objects/objApplicationTemplate__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>有効期限</label>
    <type>Date</type>
</CustomField>