force-app/main/default/objects/objApplicationTemplate__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>条件</label>
    <length>16384</length>
    <type>Html</type>
</CustomField>