force-app/main/default/objects/objApplicationTemplate__c/fields/ConfirmationCheckDescription__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationCheckDescription__c</fullName>
    <defaultValue>(&quot;入力内容を確認しました&quot;)</defaultValue>
    <label>内容確認チェック説明文</label>
    <length>255</length>
    <type>Text</type>
</CustomField>