force-app/main/default/objects/objApplicationTemplate__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>概要説明</label>
    <length>16384</length>
    <type>Html</type>
</CustomField>