force-app/main/default/objects/objApplicationTemplate__c/fields/FileUploadDescription__c.field-meta.xml
<CustomField>
    <fullName>FileUploadDescription__c</fullName>
    <label>添付ファイル説明</label>
    <length>16384</length>
    <type>Html</type>
</CustomField>