force-app/main/default/objects/objApplicationTemplate__c/fields/InputPageNames__c.field-meta.xml
<CustomField>
    <fullName>InputPageNames__c</fullName>
    <label>入力ページ名（複数）</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>