force-app/main/default/objects/objApplicationTemplate__c/fields/isAgreementCheckboxEnabled__c.field-meta.xml
<CustomField>
    <fullName>isAgreementCheckboxEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>同意チェック有効化</label>
    <type>Checkbox</type>
</CustomField>