force-app/main/default/objects/objApplicationTemplate__c/fields/isConfirmationCheckboxEnabled__c.field-meta.xml
<CustomField>
    <fullName>isConfirmationCheckboxEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>内容確認チェック有効化</label>
    <type>Checkbox</type>
</CustomField>