force-app/main/default/objects/objApplicationTemplate__c/fields/isFileUploadAccepted__c.field-meta.xml
<CustomField>
    <fullName>isFileUploadAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>添付ファイル有効化</label>
    <type>Checkbox</type>
</CustomField>