force-app/main/default/objects/objApplicationTemplate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>下書き</fullName>
                <default>true</default>
                <label>下書き</label>
            </value>
            <value>
                <fullName>公開中</fullName>
            </value>
            <value>
                <fullName>停止中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>