force-app/main/default/objects/objApplicationTemplate__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>対象</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>住民</fullName>
            </value>
            <value>
                <fullName>事業者</fullName>
            </value>
            <value>
                <fullName>両方</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>