force-app/main/default/objects/objApplicationTemplate__c/fields/ThankyouPageDescription__c.field-meta.xml
<CustomField>
    <fullName>ThankyouPageDescription__c</fullName>
    <label>完了説明文</label>
    <length>16384</length>
    <type>Html</type>
</CustomField>